2016-01-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (copy_converting): Don't check whether a 
	value of type size_t is negative in loop condition, because 
	size_t is unsigned.  Always loop instead.

2016-01-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/terminal.c (term_mm, terminal_has_meta_p): Remove unused 
	variables.
	* info/terminal.c (terminal_initialize_terminal),
	* info/pcterm.c (pc_initialize_terminal): Don't refer to removed 
	variables.

2016-01-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Node Menu Illustration): Change "copy of 
	diagram" to "diagram".

2016-01-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/run_parser_all.sh: Run sed on file logging standard 
	error of program to account for variant output under MS-Windows, 
	reported by Eli Zaretskii.

2016-01-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/text.c (text_destroy): New 
	function.
	* tp/Texinfo/Convert/XSParagraph/xspara.c (xspara_add_text): Use 
	it instead of calling free directly, because free may have been 
	redirected to Perl's version.

2016-01-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/xspara.c (xspara_new): Don't 
	call free on TEXT objects, but reuse the storage.  Attempt at 
	fixing 'Freed to wrong pool' error reported by Eli Zaretskii.

2016-01-01  Eli Zaretskii  <eliz@gnu.org>

	* tp/Texinfo/Convert/XSParagraph/xspara.c (mbrtowc): Don't try to
	convert more bytes than a single UTF-8 sequence at the beginning
	of the argument string: otherwise MultiByteToWideChar fails.

2016-01-01  Karl Berry  <karl@gnu.org>

	* makeinfo/README,
	* tp/Texinfo/Convert/Converter.pm,
	* util/dir-example,
	* build-aux/texinfo.tex: sync.
	
	* info/dir.c,
	* info/echo-area.h,
	* info/filesys.c,
	* info/indices.c,
	* info/indices.h,
	* info/info-utils.h,
	* info/infodoc.c,
	* info/infomap.c,
	* info/nodemenu.c,
	* info/search.c,
	* info/search.h,
	* info/session.h,